--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     content="Blu Bul ($BUL) - Join the wild memecoin doodle adventure on the Sui blockchain with enhanced doodles!">
   <meta name="keywords" content="Blu Bul, $BUL, memecoin, cryptocurrency, Sui blockchain, NFTs, memes">
   <title>Blu Bul - $BUL</title>
-  <link rel="shortcut icon" href="main.jpg" type="image/x-icon">
+  <link rel="icon" href="main.jpg" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Gochi+Hand&family=Comic+Neue:wght@400;700&display=swap"
     rel="stylesheet">
